--- a/services/drainage-systems.html
+++ b/services/drainage-systems.html
@@ -2,7 +2,7 @@
 
 <html lang="en" class="no-js">
     <head>
-        <title>Drainage System Services in Stamford, CT, and nearby areas</title>
+        <title>Excavation, Water, and Drainage Services in Stamford, CT, and nearby areas</title>
 
         <!-- favicon path  -->
         <link
@@ -147,12 +147,12 @@
                         >
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a class="active" href="#home-section">Home</a>
+                                    <a class="active" href="/">Home</a>
                                 </li>
                                 <li><a href="#about">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
                                 <li>
-                                    <a href="services.html">Services</a>
+                                    <a href="#">Services</a>
                                     <ul class="drop-down">
                                         <li>
                                             <a href="../services/drainage-systems.html"
@@ -197,7 +197,7 @@
                                     </ul>
                                 </li>
                                 <!-- <li><a href="blog.html">blog</a></li> -->
-                                <li><a href="service-areas.html">Service Areas</a>
+                                <li><a href="/service-areas">Service Areas</a>
                                     <ul class="drop-down">
                                         <li>
                                             <a href="/service-areas/stamford-ct.html"
@@ -281,15 +281,11 @@
 			================================================== -->
             <section class="page-banner-section">
                 <div class="container">
-                    <h1>Drainage Systems Service in Stamford, CT</h1>
+                    <h1>Drainage Systems Service</h1>
                     <ul class="page-depth">
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="./index.html">Services</a></li>
-                        <li>
-                            <a href="repairing.html"
-                                >Drainage Systems</a
-                            >
-                        </li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/services">Services</a></li>
+                        <li><a href="#">Drainage Systems</a></li>
                     </ul>
                 </div>
             </section>
@@ -306,7 +302,7 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="upload/others/7.jpg"
+                                                src="../upload/others/7.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
@@ -347,7 +343,7 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="upload/others/maintanance.jpg"
+                                                src="../upload/others/maintanance.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
@@ -391,7 +387,7 @@
                                 <div class="services-tabs">
                                     <ul>
                                         <li>
-                                            <a href="services.html"
+                                            <a href="#"
                                                 >All Services</a
                                             >
                                         </li>
@@ -438,110 +434,45 @@
                 <div class="container">
                     <div class="footer-widgets">
                         <div class="row">
-                            <div class="col-md-3">
-                                <div class="widgets">
-                                    <h2>About us</h2>
-                                    <p>
-                                        Duis aute irure dolor in reprehenderit
-                                        in voluptate velit esse cillum dolore eu
-                                        fugiat nulla pariatur.
-                                    </p>
-                                    <p>
-                                        Reprehenderit in voluptate velit esse
-                                        cillum nulla pariatur.
-                                    </p>
+                            <div class="col-md-4">
+                                <h2>About Us</h2>
+                                <p>As your trusted local experts, we focus on quality, efficiency, and customer satisfaction, delivering top-notch solutions tailored to your specific needs every time. 
+                                Enjoy peace of mind knowing that your project is in expert hands. Headquartered in Stamford, CT, we also service the nearby areas including: 
+                                </p>
+                            </div>
+                            <div class="col-md-4">
+                                <h2>Service Areas</h2>
+                                <div style="display: grid;
+                                grid-template-columns: repeat(auto-fit, minmax(10rem, auto));
+                                gap: 2rem;
+                                align-items: center;
+                                
+                                cursor: pointer;">
+                                    <a href="/service-areas/stamford-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Stamford</a>
+                                    <a href="/service-areas/greenwich-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Greenwich</a>
+                                    <a href="/service-areas/norwalk-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Norwalk</a>
+                                    <a href="/service-areas/darien-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Darien</a>
+                                    <a href="/service-areas/wilton-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Wilton</a>
+                                    <a href="/service-areas/new-canaan-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;New Canaan</a><a href="/service-areas/westport-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Westport</a>
+                                    <a href="/service-areas/fairfield-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Fairfield</a>
+                                    <a href="/service-areas/stratford-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Stratford</a>
+                                    <a href="/service-areas/byram-ct.html"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Byram</a>
                                 </div>
                             </div>
-                            <div class="col-md-3">
-                                <div class="widgets">
-                                    <h2>Tags</h2>
-                                    <ul class="tag-list">
-                                        <li><a href="#">Interior</a></li>
-                                        <li><a href="#">Website</a></li>
-                                        <li><a href="#">Development</a></li>
-                                        <li><a href="#">Medicine</a></li>
-                                        <li><a href="#">Web Design</a></li>
-                                        <li><a href="#">Photography</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="widgets">
-                                    <h2>Flickr widget</h2>
-                                    <ul class="flickr-list">
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/1.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/2.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/3.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/4.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/5.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/6.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/1.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                                ><img
-                                                    src="upload/flickr/2.jpg"
-                                                    alt=""
-                                            /></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <div class="widgets info-widget">
                                     <h2>Working Hours</h2>
                                     <p class="first-par">
                                         You can contact or visit us during
                                         working time.
                                     </p>
-                                    <p><span>Tel: </span> 1234 - 5678 - 9012</p>
+                                    <p><span>Tel: </span>203-348-6966</p>
                                     <p>
-                                        <span>Email: </span> nunforest@gmail.com
+                                        <span>Email: </span> service@surwilo.com
                                     </p>
                                     <p>
                                         <span>Working Hours: </span> 8:00 a.m -
-                                        17:00 a.m
+                                        5:00 p.m
                                     </p>
                                 </div>
                             </div>
@@ -551,7 +482,7 @@
                 <div class="last-line">
                     <div class="container">
                         <p class="copyright">
-                            &copy; Copyright 2023. Surwilo Contracting LLC. All
+                            &copy; Copyright 2023. Surwilo Contracting, LLC. All
                             rights reserved.
                         </p>
                     </div>
